# mynintendo-scraper

./: .env.example  .gitignore  LICENSE  README.md  app.py  docker-compose.yml  fly.io-merge.yml  main.py  models.py  requirements.txt
.github/workflows/: fly.io-merge.yml  frontend-ci.yml  python-tests.yml
app/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
app/public/: manifest.json
app/src/: App.module.css  App.test.tsx  App.tsx  config.ts  index.css  index.tsx
app/src/api/: myNintendoScraperAPI.ts
app/src/components/: ChangedItemsList.tsx  Changes.tsx  ErrorView.tsx  ItemCard.tsx  ItemGrid.tsx  Items.tsx  LoadingSVG.tsx  ThemeSwitcher.tsx  changedItemsList.tsx
app/src/interfaces/: interfaces.ts  scrapedItems.ts
server/: .dockerignore  .gitignore  README.Docker.md  app.py  compose.yaml  dockerfile  errors.py  fly.toml  main.py  models.py  pyproject.toml  requirements.txt  tests.py
server/helpers/: calculate_expiration_date.py  expand_rewards_list.py  find_items.py  index_of_common_strings.py  load_page_data.py  remove_trademark_false_positives.py  remove_trademark_symbols.py
server/routes/: check_api.py  main_api.py
server/tests/: conftest.py  test_helpers.py  test_main.py  test_models.py  test_routes.py
templates/: home.html
