[project]
name = "server"
version = "0.1.0"
description = "My Nintendo rewards scraper API"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12",
    "deepdiff>=8.0",
    "flask>=3.1",
    "flask-cors>=5.0",
    "flask-sqlalchemy>=3.1",
    "gunicorn>=23.0",
    "lxml>=5.3",
    "playwright>=1.50",
    "psycopg2>=2.9",
    "python-dotenv>=1.0",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "pycodestyle>=2.12",
]
