[project]
name = "server"
version = "0.1.0"
description = "My Nintendo rewards scraper API"
requires-python = ">=3.10"
dependencies = [
    "attrs==23.2.0",
    "beautifulsoup4==4.11.1",
    "blinker==1.7.0",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "click==8.1.3",
    "deepdiff==6.2.3",
    "exceptiongroup==1.2.1",
    "flask==3.0.2",
    "flask-cors==5.0.0",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.2.3",
    "gunicorn==22.0.0",
    "h11==0.14.0",
    "idna==3.7",
    "itsdangerous==2.1.2",
    "jinja2==3.1.4",
    "lxml==5.2.1",
    "markupsafe==2.1.1",
    "ordered-set==4.1.0",
    "orjson==3.10.15",
    "outcome==1.3.0.post0",
    "packaging==24.0",
    "playwright==1.53.0",
    "psycopg2-binary==2.9.10",
    "pyee==13.0.0",
    "pysocks==1.7.1",
    "python-dotenv==1.0.1",
    "requests==2.32.2",
    "six==1.16.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.3.2.post1",
    "sqlalchemy==2.0.39",
    "tomli==2.0.1",
    "trio==0.25.0",
    "trio-websocket==0.11.1",
    "typing-extensions==4.12.2",
    "urllib3==2.2.2",
    "werkzeug==3.0.6",
    "wsproto==1.2.0",
]

[dependency-groups]
dev = [
    "pycodestyle==2.10.0",
]
